# DRF_lms

./: Dockerfile  README.md  docker-compose.yaml  env.simple  pyproject.toml
config/: celery.py  settings.py  urls.py
lms/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_name.py  0003_alter_course_name_alter_lesson_course.py  0004_course_owner_lesson_owner.py  0005_subscription.py  0006_course_price_lesson_price_subscription_price.py
users/: admin.py  models.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: payments_data.json
users/management/commands/: create_superuser.py
users/migrations/: 0001_initial.py  0002_payments_payments_unique_user_content_type_object_id.py  0003_alter_user_avatar.py  0004_alter_payments_object_id.py  0005_alter_payments_object_id.py  0006_alter_user_managers_payments_payment_url_and_more.py  0007_alter_payments_payment_url_and_more.py
